# gateway-service

./: docker-compose.yaml  nginx.conf  pyproject.toml
src/: config.py  main.py
src/endpoints/: dictionary.py  payments.py  users.py
src/models/: __init__.py  db_models.py  dict_models.py
