[project]
name = "x-api-service"
version = "0.6.1"
description = "API Gateway"
authors = [
    {name = "Gabriel Bouchard",email = "gabouchard2002@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
